# GO2_tasks

./: CMakeLists.txt  README.md  go2_Movetopose.cpp  go2_getcontrol.cpp  go2_getinfo.cpp  go2_go_around.cpp  go2_police1.cpp  go2_police1_realsense.cpp  go2_police2v1.cpp  go2_police2v2.cpp  go2_robot_state_client.cpp  go2_sport_client.cpp  go2_sport_client1.cpp  go2_stand_example1.cpp  go2_test copy.cpp  go2_test.cpp  xx.cpp
GO2_task_cmakelist/: CMakeLists.txt
